# truenorth

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json
.githooks/: commit-msg
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: ai.md  blueprint.md  import.md  kickoff-prompt.md  plan.md  questrade.md  releasing.md  simplefin.md  snaptrade.md  teller.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fx.rs  lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/commands/: accounts.rs  ai.rs  cashflow.rs  fire.rs  fx.rs  goals.rs  import.rs  mod.rs  net_worth.rs  progress.rs  questrade.rs  simplefin.rs  simulator.rs  snaptrade.rs  teller.rs  wealth.rs
src-tauri/src/connector/: manual.rs  mod.rs
src-tauri/src/connector/questrade/: client.rs  mod.rs
src-tauri/src/connector/simplefin/: client.rs  mod.rs
src-tauri/src/connector/snaptrade/: client.rs  mod.rs  sign.rs
src-tauri/src/connector/teller/: client.rs  mod.rs
src-tauri/src/db/: crypto.rs  mod.rs  schema.rs  secret_store.rs  secrets.rs
src/components/: AccountList.tsx  AccountModal.tsx  AdvisorModal.tsx  AdvisorPanel.tsx  CashflowCard.tsx  ConnectionsModal.tsx  FirePlannerCard.tsx  GoalCountdownCard.tsx  ImportModal.tsx  MarkdownMessage.tsx  NetWorthCard.tsx  NetWorthChart.tsx  ProgressCard.tsx  SeattleSimulatorCard.tsx  ToolTrace.tsx  UpdatePrompt.tsx  WealthBenchmarkCard.tsx
src/hooks/: useFinanceApi.ts  useUpdater.ts
src/pages/: Dashboard.tsx
src/types/: ai.ts  finance.ts
