[package]
name = "finance-second-brain"
version = "0.1.1"
description = "Local-first, privacy-first desktop app for cross-border (US + Canada) personal finances."
authors = ["Daryn Brown"]
edition = "2021"

[lib]
name = "finance_second_brain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite — bundled SQLCipher (encryption at rest). Vendored OpenSSL keeps the macOS + Windows
# CI matrix self-contained (no system OpenSSL needed).
rusqlite = { version = "0.37", features = ["bundled-sqlcipher-vendored-openssl"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Yahoo Finance / FX rates
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
thiserror = "2"

# Object-safe async trait impls
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["clock", "serde"] }

# OS keychain — for storing connector secrets (Phase 2+) and the DB encryption key.
# keyring v3 gates its OS backends behind features; with none enabled it silently falls back to a
# non-persistent in-memory store, so the key would be lost between launches. The real backend is
# enabled per-target below (apple-native / windows-native).
keyring = { version = "3" }

# DB encryption key generation + hex encoding
rand = "0.8"
hex = "0.4"

# Real OS keychain backends for `keyring`, enabled per-target so the DB encryption key actually
# persists (macOS Keychain / Windows Credential Manager). Without these the key is lost on exit and
# the encrypted database can never be reopened.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[features]
# This feature is used for production builds or when `devtools` feature is not needed.
custom-protocol = ["tauri/custom-protocol"]
